--- a/DockerFile
+++ b/DockerFile
@@ -9,6 +9,7 @@ FROM nginx:latest
 WORKDIR /usr/share/nginx/html
 RUN rm -rf ./*
 COPY --from=build /app/dist .
+COPY default.conf /etc/nginx/conf.d/default.conf
 
 ENV VITE_BASE_URL="http://localhost:8000/api"
 
